[package]
name = "lasersell"
version = "0.4.0"
edition = "2021"
publish = true
description = "Open-source Solana exit daemon with automated exits and real-time position monitoring"
license = "MIT"
homepage = "https://lasersell.io"
repository = "https://github.com/lasersell/lasersell"
documentation = "https://docs.lasersell.io"

[features]
default = []
devnet = ["tracing-appender"]

[dependencies]
anyhow = "1"
argon2 = "0.5"
async-trait = "0.1"
base64 = "0.21"
bip39 = { package = "tiny-bip39", version = "0.8.2" }
bs58 = "0.5"
chacha20poly1305 = "0.10"
clap = { version = "4", features = ["derive", "env"] }
cliclack = "0.3"
crossterm = "0.27"
directories = "5"
lasersell-sdk = "0.2"
parking_lot = "0.12"
rand = "0.8"
ratatui = "0.27"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
rpassword = "7"
secrecy = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
solana-derivation-path = "3.0.0"
solana-sdk = "=3.0.0"
spl-token = { version = "9", features = ["no-entrypoint"] }
spl-token-interface = "2"
spl-token-2022 = { version = "10", features = ["no-entrypoint"] }
time = { version = "0.3", features = ["macros", "formatting", "parsing"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "sync", "net", "test-util"] }
tracing = "0.1"
tracing-appender = { version = "0.2", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
zeroize = "1"

[dev-dependencies]
serde_json = "1"
tempfile = "3"

[profile.release]
lto = "fat"
codegen-units = 1
strip = "symbols"
debug = 0
panic = "abort"
opt-level = 3
